fix: layout on small-height screens

--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -9,7 +9,7 @@ body {
   background-color: #111;
   padding: $padding;
 
-  @media (min-width: 1400px) {
+  @media (min-width: 1400px) and (min-height: 950px) {
     height: 100vh;
     width: 100%;
   }
