--- a/src/scss/components/map.scss
+++ b/src/scss/components/map.scss
@@ -15,7 +15,7 @@
     margin-right: 10px;
   }
 
-  @media (min-width: 1400px) {
+  @media (min-width: 1400px) and (min-height: 950px) {
     width: calc(100% - 930px);
     height: calc(100vw - 950px);
     margin-right: $margin;
@@ -25,30 +25,32 @@
 }
 
 // map info window
-.info { 
-  padding: 6px 8px; 
+.info {
+  padding: 6px 8px;
   color: #000;
-  font: 14px/16px Arial, Helvetica, sans-serif; 
-  background: rgba(255,255,255,0.8); 
-  box-shadow: 0 0 15px rgba(0,0,0,0.2); 
-  border-radius: 5px; 
-} 
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+}
 
-.info h4 { 
-  margin: 0 0 5px; 
-  color: #777; 
+.info h4 {
+  margin: 0 0 5px;
+  color: #777;
   font-weight: 600;
 }
 
 // map legend
 .legend {
-   text-align: left; 
-   line-height: 18px; 
-   color: #555; } 
+  text-align: left;
+  line-height: 18px;
+  color: #555;
+}
 
-.legend i { width: 18px; 
-  height: 18px; 
-  float: left; 
-  margin-right: 8px; 
-  opacity: 0.7; 
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
 }
